--- a/lesson-1/css/styles.css
+++ b/lesson-1/css/styles.css
@@ -1,2 +1,68 @@
 @charset "UTF-8";
+ /* Named selector  */
 
+ h2{
+    color: red;
+    font-style: italic;
+ }
+
+ /* ID selector */
+#project {
+    color:olive;
+   
+}
+/* class selector  */
+.about {
+    background-color: azure;
+}
+
+/* Contextual/Descendent selector */
+section p{
+    color: orange;
+}
+
+.subproject p{
+    color: rgb(43, 43, 136);
+}
+
+/* group selector */
+h1, h2, h3 {
+    font-family: sans-serif;
+}
+
+/* pseudoclass selector */
+a:link{
+    text-decoration: none;
+    color: rgb(12, 162, 110);
+    font-weight: bold;
+}
+
+a:visited{
+    color: brown;
+}
+
+a:focus{
+    background-color: yellow;
+}
+a:hover{
+    text-decoration:underline;
+}
+a:active{
+    color: darkorange;
+}
+
+/* Structural pseudoclass */
+li:nth-child(3n-1){
+    background-color: blueviolet;
+}
+li:nth-of-type(even){
+    font-weight: bold;
+}
+article section:last-of-type{
+    background-color: darkkhaki;
+}
+
+/* Sibling and pseudoelement selector */
+h1+p::first-line{
+text-transform: uppercase;
+}
