--- a/lab-1/main.css
+++ b/lab-1/main.css
@@ -13,7 +13,7 @@ body{
 
 }
 header{
-    line-height: 10px;
+    line-height: 2%;
 }
 header h1{
    
@@ -27,7 +27,7 @@ header h1{
   font-size: 50px;
 }
 header p{
-    font-size: 2.3rem;
+    font-size: 2.2rem;
     padding: 0.5rem;
     font-family: "Oswald", sans-serif;
   font-optical-sizing: auto;
